syntax = "proto3";
package grpc.proto.ping;
option csharp_namespace = "Grpc.Proto.Ping";

service Ping
{
	rpc Call (PingRequest) returns (PingReply);
}

message PingRequest
{
}

message PingReply
{
	string utc = 1;
}
