syntax = "proto3";
package grpc.proto.rpc;
option csharp_namespace = "Grpc.Proto.Rpc";

service Rpc
{
	rpc Method (RpcRequest) returns (RpcReply);
}

message RpcRequest
{
	string args = 1;
}

message RpcReply
{
	enum Code {
		Success = 0;
		Failed = 1;
	}

	Code code = 1;
	string message = 2;
}
